# wqu-capstone

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_data_preparation.py  run_optimisation.py  run_test_evaluation.py
docs/: optimisation_pipeline_diagram.md
notebooks/: 02_ES_ppa_modelling.ipynb
src/: __init__.py  data_preparation.py  optimisation_problem.py  ppa_analysis.py  ppa_optimiser.py  ppa_payoff.py  ppa_risk_metrics.py  results_analysis.py  search_tracking.py
